--- a/views/items/new.ejs
+++ b/views/items/new.ejs
@@ -2,16 +2,16 @@
 
 <div class="container">
     <div class="row">
-        <h1>Create a New Campground</h1>
+        <h1>Create a New Review</h1>
         
-        <form action="/campgrounds" method="POST">
+        <form action="/items" method="POST">
             <input class="form-control" type="text" placeholder="name" name="name">
             <input class="form-control" type="text" placeholder="image url" name="image">
             <input class="form-control" type="text" placeholder="description" name="description">
             <button class="btn btn-lg btn-default">Submit!</button>
         </form>
         
-        <a href="/campgrounds">Go Back</a>
+        <a href="/items">Go Back</a>
     </div>
 </div>
 
