--- a/views/items/index.ejs
+++ b/views/items/index.ejs
@@ -3,27 +3,27 @@
 <div class="container">
     <header class="jumbotron">
         <div class="container">
-            <h1>This is the campgrounds page</h1>
-            <p>View our hand-picked campgrounds from all over the world!</p>
+            <h1>This is the reviews page!</h1>
+            <p>Look at reviews of food, places, events, etc. from all over the world!</p>
             <p>
-                <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground</a>
+                <a class="btn btn-primary btn-lg" href="/items/new">Add New item</a>
             </p>
         </div>
     </header>
 
     <div class="row text-center">
         <div class="col-lg-12">
-            <h3>Our Most Popular Campgrounds</h3>
+            <h3>Our Most Popular Reviews</h3>
         </div>
-        <% campgrounds.forEach(function(campground){ %>
+        <% items.forEach(function(item){ %>
             <div class="col-md-3 col-sm-6">
                 <div class="thumbnail">
-                    <img src="<%= campground.image %>">
+                    <img src="<%= item.image %>">
                     <div class="caption">
-                        <h4><%= campground.name %></h4>
+                        <h4><%= item.name %></h4>
                     </div>
                     <p>
-                        <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+                        <a href="/items/<%= item._id %>" class="btn btn-primary">More Info</a>
                     </p>
                 </div>
             </div>
