--- a/views/items/show.ejs
+++ b/views/items/show.ejs
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <p class="lead">Yelp Camp</p>
+            <p class="lead">Revvue</p>
             <div class="list-group">
                 <li class="list-group-item"></li>
                 <li class="list-group-item"></li>
@@ -12,19 +12,19 @@
         </div>
         <div class="col-md-9">
             <div class="thumbnail">
-                <img class="img-responsive" src="<%= campground.image %>">
+                <img class="img-responsive" src="<%= item.image %>">
                 <div class="caption-full">
                     <h4 class="pull-right">$9.00/night</h4>
-                    <h4><a><%= campground.name %></a></h4>
-                    <p><%= campground.description %></p>
-                    <p><em>Submitted By <%= campground.author.username %></em></p>
+                    <h4><a><%= item.name %></a></h4>
+                    <p><%= item.description %></p>
+                    <p><em>Submitted By <%= item.author.username %></em></p>
                 </div>
             </div>
             <div class="well">
-                <div class="text-right"><a href="/campgrounds/<%= campground._id %>/comments/new" class="btn btn-success">Add New Comment</a></div>
+                <div class="text-right"><a href="/items/<%= item._id %>/comments/new" class="btn btn-success">Add New Comment</a></div>
             </div>
             <hr>
-            <% campground.comments.forEach(function(comment){ %>
+            <% item.comments.forEach(function(comment){ %>
                 <div class="row">
                     <div class="col-md-12">
                         <strong><%= comment.author.username %></strong>
@@ -36,13 +36,5 @@
         </div>
     </div>
 </div>
-
-<p>
-    <a href="/campgrounds/<%= campground._id %>/comments/new" class="btn btn-success">Add New Comment</a>
-</p>
-
-<% campground.comments.forEach(function(comment){ %>
-    <p><strong><%= comment.author %></strong> - <%= comment.text %></p>
-<% }); %>
 
 <% include ../partials/footer %>
