--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,8 +2,8 @@
 
 <h1>Landing Page!</h1>
 
-<p>Welcome to YelpCamp</p>
+<p>Welcome to Revvue</p>
 
-<a href="/campgrounds">View all campgrounds</a>
+<a href="/items">View all reviews</a>
 
 <% include partials/footer %>
